--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
            
             <span>Ваша стать</span>
             <label>
-            <div>
-            <input type="radio" name="sex" value="чоловіча" checked>Чоловіча
+            <div><input type="radio" name="sex" value="чоловіча" checked>Чоловіча
             <class="radio-control male"></div>
             </label>
             <label>
-            <input type="radio" name="sex" value="жіноча">Жіноча
+            <div><input type="radio" name="sex" value="жіноча">Жіноча
             <class="radio-control female"></div>
             </label>
            
