--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             </div>
        
             <div><select name="Towns" id="City">
-            <option disabled selected value="">Виберіть місто</option>
-            <option value="New-York">New-York</option>
-            <option value="London">London</option>
-            <option value="Tokio">Tokio</option>
-            <option value="Жашків">Жашків</option>
+            <label><option disabled selected value="">Виберіть місто</option></label>
+            <label><option value="New-York">New-York</option></label>
+            <label><option value="London">London</option></label>
+            <label><option value="Tokio">Tokio</option></label>
+            <label><option value="Жашків">Жашків</option></label>
             </select>
             </div>
         
